# tauri-plugin-in-app-review

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  package.json
examples/tauri-app/: pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
guest-js/: index.ts
ios/Sources/: InAppReviewPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: request_review.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
